# sc1

./: .gitignore
conjugate_gradient/: .build_problem.h.kate-swp  .conjugate_gradient.h.kate-swp  CMakeLists.txt  build_problem.h  conanfile.txt  conjugate_gradient.h  conjugate_gradient.kdev4  key.txt  main.cpp  sbmv.h
conjugate_gradient/.kdev4/: conjugate_gradient.kdev4
conjugate_gradient/cmake/: FindMKL.cmake
conjugate_gradient/src/: build_problem.h  conjugate_gradient.h  main.cpp  mkl_tridiagonal_solver.h  sbmv.h
conjugate_gradient/src/plot/: plot.h
finite_elemente/: CMakeLists.txt  assemble_problem.hpp  conanfile.txt  constant_size_matrix.hpp  gcc_7.3  main.cpp
